smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/numbers/leading-decimal.smithy
// Parse error at line 7, column 7 near `.1`: Expected a valid identifier character, but found '.'
namespace smithy.example

@trait
integer test

@test(.1)
string MyString
